--- a/style.css
+++ b/style.css
@@ -392,7 +392,8 @@ a, button {
     font-weight: 600;
     transition: all 300ms ease;
     padding: 1rem;
-    width: 8rem;
+    width: fit-content;
+    min-width: fit-content;
     border-radius: 2rem;
 }
  
